<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/main_title"
            android:textSize="21sp"
            android:textStyle="bold"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bttn_basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bttn_basic"
            android:layout_margin="16dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bttn_zoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bttn_zoom"
            android:layout_margin="16dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bttn_anim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bttn_anim"
            android:layout_margin="16dp"
            />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>