<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bttn_show_thumbnail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/bttn_show_thumb"
        app:layout_constraintEnd_toStartOf="@id/bttn_show_source"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bttn_show_source"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/bttn_show_source"
        app:layout_constraintStart_toEndOf="@id/bttn_show_thumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bttn_show_loading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/bttn_show_loading"
        app:layout_constraintEnd_toStartOf="@id/bttn_show_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bttn_show_thumbnail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bttn_show_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/bttn_show_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bttn_show_loading"
        app:layout_constraintTop_toBottomOf="@id/bttn_show_source" />

    <com.kirkbushman.largeimageview.LargeImageView
        android:id="@+id/liv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:showImageWhenAvailable="true"
        app:layout_constraintTop_toBottomOf="@id/bttn_show_loading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>